--- a/package.json
+++ b/package.json
@@ -12,11 +12,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^4.12.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mongodb": "^5.2.0",
     "nodemon": "^2.0.22",
     "pollinator": "^0.3.2"
+  },
+  "devDependencies": {
+    "prisma": "^4.12.0"
   }
 }
